feat: implement employee data import/export functionality and expand backend service layer